# game-news-aggregator

./: .editorconfig  .gitignore  CHATGPT_TASK_PROMPT_RU.md  Makefile  OPERATIONS_RU.md  README.md  SETUP_RU.md  SOURCES_RU.md  VERIFICATION_REPORT.md  lint-output.txt  pyproject.toml  test-output.txt
.github/: ci-smoke.txt
.github/workflows/: all-source-audit-now.yml  all-source-fast-audit.yml  apply-manual-check-fix.yml  ci.yml  collect-news.yml  diagnose-lint.yml  diagnostic-tests.yml  network-smoke.yml  pages-deploy-once.yml  pages-smoke.yml  run-manual-check-report.yml  summarize-fast-audit.yml
config/: keywords.yaml  sources.yaml
data/: articles.jsonl  state.json
data/imports/: README.md  hyper_news_result.json
public/: audit-summary.json  audit-summary.md  diagnostics.json  diagnostics.md  index.html  latest.json  manual-checks.json  manual-checks.md  pages-deploy-status.json  status.json
public/archive/: 2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
scripts/: bootstrap.ps1  bootstrap.sh  collect.ps1  preview.ps1
src/game_news/: __init__.py  __main__.py  cli.py  collector.py  config.py  dedupe.py  discovery.py  http.py  models.py  normalize.py  parsers.py  scoring.py  site.py  storage.py  telegram_import.py
tests/: test_collector_pipeline.py  test_config.py  test_dedupe.py  test_normalize.py  test_parsers.py  test_seed_history.py  test_site.py  test_telegram_import.py
tests/fixtures/: rss.xml  sitemap.xml  telegram_export.json
