[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-news-aggregator"
version = "1.0.0"
description = "Scheduled game-industry news collector for GitHub Actions and GitHub Pages"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Repository owner" }]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "feedparser>=6.0,<7",
  "lxml>=5.2,<7",
  "python-dateutil>=2.9,<3",
  "PyYAML>=6.0,<7",
  "rapidfuzz>=3.9,<4",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
game-news = "game_news.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
